# OpenLIFU-verification-tank

./: .gitignore  README.md  continuous_cli.py  pyproject.toml  qpx600dp.py  requirements.txt
docs/: api.md  hydrophone_class.md  picoscope_class.md  qpx600dp_class.md  verificationtank_class.md
hydrophone_calibrations/: HNR0500-2246_xxxxxx-xxxx-xx_xx_20221219 (1).txt
openlifu_verification/: __init__.py  hydrophone.py  picoscope.py  qpx600dp.py  verification.py  verificationtank.py
scripts/: continuous_cli.py  find_peak.py  hydrophone_example.py  plot_frequency.py  plot_lat.py  plot_voltage.py  scan_2d.py  scan_frequency.py  scan_lat.py  scan_voltage.py  single_pulse.py
tests/: test_hydrophone.py
transducers/: transducers.json
