[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openlifu-verification"
version = "0.0.1"
dependencies = [
    "numpy",
    "matplotlib",
    "picosdk",
    "openlifu @ git+https://github.com/OpenWaterHealth/OpenLIFU-python",
]

[tool.setuptools]
packages = ["openlifu_verification"]
