[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openlifu-verification"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "picosdk",
    "openlifu",
]

[tool.setuptools]
packages = ["openlifu_verification"]
